tests/baselines/reference/stringLiteralCheckedInIf02.errors.txt
stringLiteralCheckedInIf02.ts(4,10): error TS99999: Function was inferred to be a type guard


==== stringLiteralCheckedInIf02.ts (1 errors) ====
    type S = "a" | "b";
    type T = S[] | S;
    
    function isS(t: T): t is S {
             ~~~
!!! error TS99999: Function was inferred to be a type guard
        return t === "a" || t === "b";
    }
    
    function f(foo: T) {
        if (isS(foo)) {
            return foo;
        }
        else { 
            return foo[0];
        }
    }